--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ categories    = ["encoding"]
 name = "cbor"
 
 [features]
-random = ["quickcheck"]
+random     = ["quickcheck"]
+with-serde = ["serde", "quick-error"]
 
 [dependencies]
 byteorder = ">= 0.5.0"
@@ -21,6 +22,14 @@ libc      = ">  0.1.0"
 
 [dependencies.quickcheck]
 version  = ">= 0.2.21"
+optional = true
+
+[dependencies.serde]
+version  = "1"
+optional = true
+
+[dependencies.quick-error]
+version  = "1"
 optional = true
 
 [dev-dependencies]
